--- a/app/src/main/res/values-ru/colors.xml
+++ b/app/src/main/res/values-ru/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="greeting_text_color">#0000ff</color>
+    <color name="red">#0000ff</color>
 </resources>
