--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -2,27 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@color/background_login_blue_color"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_login_blue_color"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
-
+    tools:context=".RegistrationActivity">
 
     <TextView
-        android:id="@+id/textViewLogin"
+        android:id="@+id/textViewCreateAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="150dp"
         android:fontFamily="@font/alata"
-        android:text="@string/login"
+        android:text="@string/create_account"
         android:textColor="@color/login_green_color"
         android:textSize="25sp"
         android:textStyle="bold" />
-
     <EditText
-        android:id="@+id/userLogin"
+        android:id="@+id/userLoginRegistration"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
@@ -34,9 +32,21 @@
         android:padding="12dp"
         android:textColorHint="@color/gray_hint_color" />
 
+    <EditText
+        android:id="@+id/userEmailRegistration"
+        android:layout_width="220dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_edit_text"
+        android:ems="10"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:padding="12dp"
+        android:textColorHint="@color/gray_hint_color" />
 
     <EditText
-        android:id="@+id/userPassword"
+        android:id="@+id/userPasswordRegistration"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
@@ -49,13 +59,33 @@
         android:textColorHint="@color/gray_hint_color" />
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/signUpButton"
         android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/rounded_button"
-        android:text="@string/login"
+        android:text="@string/sign_up"
         android:textColor="@color/white"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textViewIsAlreadyRegistered"
+        android:layout_width="190dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:text="@string/havent_register_yet" />
+
+    <TextView
+        android:id="@+id/textViewIsLogin"
+        android:layout_width="190dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:text="@string/sign_up"
+        android:textColor="@color/light_blue" />
+
 </LinearLayout>
